...
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsActivity">

    <TextView
        android:id="@+id/tvTitleFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
...
            android:paddingEnd="8dp"
            android:paddingBottom="18sp"
            android:text="@string/summary_language" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="32dp"
        android:paddingTop="18sp"
        android:paddingEnd="8dp"
...
